crates/service/tests/diagnostics/snapshots/features__diagnostics__type_misuse__array_data.snap
---
source: crates/service/tests/diagnostics/type_misuse.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 5,
          "character": 21
        },
        "end": {
          "line": 5,
          "character": 23
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "array type `$a` must be number type or vector type but found `(ref null func)`"
    },
    {
      "range": {
        "start": {
          "line": 11,
          "character": 20
        },
        "end": {
          "line": 11,
          "character": 22
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "array type `$a` must be number type or vector type but found `(ref null func)`"
    }
  ]
}
