crates/service/tests/diagnostics/snapshots/features__diagnostics__type_misuse__array_elem.snap
---
source: crates/service/tests/diagnostics/type_misuse.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 7,
          "character": 4
        },
        "end": {
          "line": 9,
          "character": 20
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "ref type `(ref null func)` of element segment `$e1` doesn't match ref type `(ref null extern)` of array type `$a1`",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 5,
                "character": 2
              },
              "end": {
                "line": 5,
                "character": 36
              }
            }
          },
          "message": "array type `$a1` defined here"
        },
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 3,
                "character": 2
              },
              "end": {
                "line": 4,
                "character": 18
              }
            }
          },
          "message": "element segment `$e1` defined here"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 15,
          "character": 4
        },
        "end": {
          "line": 19,
          "character": 20
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "ref type `(ref null extern)` of element segment `$e2` doesn't match ref type `(ref null func)` of array type `$a2`",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 11,
                "character": 2
              },
              "end": {
                "line": 11,
                "character": 34
              }
            }
          },
          "message": "array type `$a2` defined here"
        },
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 12,
                "character": 2
              },
              "end": {
                "line": 13,
                "character": 22
              }
            }
          },
          "message": "element segment `$e2` defined here"
        }
      ]
    }
  ]
}
