crates/service/tests/diagnostics/snapshots/features__diagnostics__type_misuse__br_on_null.snap
---
source: crates/service/tests/diagnostics/type_misuse.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 4,
          "character": 6
        },
        "end": {
          "line": 4,
          "character": 19
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [(ref null any)], found []"
    },
    {
      "range": {
        "start": {
          "line": 9,
          "character": 6
        },
        "end": {
          "line": 9,
          "character": 19
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [i32, (ref null any)], found [i32]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 8,
                "character": 6
              },
              "end": {
                "line": 8,
                "character": 17
              }
            }
          },
          "message": "expected type `(ref null any)`, found `i32`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 4,
          "character": 6
        },
        "end": {
          "line": 4,
          "character": 19
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "first type from stack top must be ref type"
    },
    {
      "range": {
        "start": {
          "line": 9,
          "character": 6
        },
        "end": {
          "line": 9,
          "character": 19
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "first type from stack top must be ref type but found `i32`"
    }
  ]
}
