crates/service/tests/diagnostics/snapshots/features__diagnostics__type_misuse__cast_to_cont.snap
---
source: crates/service/tests/diagnostics/type_misuse.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 5,
          "character": 14
        },
        "end": {
          "line": 5,
          "character": 46
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "cannot cast to continuation type `(ref null cont)`"
    },
    {
      "range": {
        "start": {
          "line": 6,
          "character": 14
        },
        "end": {
          "line": 6,
          "character": 50
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "cannot cast to continuation type `(ref null nocont)`"
    },
    {
      "range": {
        "start": {
          "line": 7,
          "character": 14
        },
        "end": {
          "line": 7,
          "character": 47
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "cannot cast to continuation type `(ref $c)`"
    },
    {
      "range": {
        "start": {
          "line": 9,
          "character": 14
        },
        "end": {
          "line": 9,
          "character": 46
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "cannot cast to continuation type `(ref null cont)`"
    },
    {
      "range": {
        "start": {
          "line": 10,
          "character": 14
        },
        "end": {
          "line": 10,
          "character": 50
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "cannot cast to continuation type `(ref null nocont)`"
    },
    {
      "range": {
        "start": {
          "line": 11,
          "character": 14
        },
        "end": {
          "line": 11,
          "character": 47
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "cannot cast to continuation type `(ref $c)`"
    },
    {
      "range": {
        "start": {
          "line": 14,
          "character": 28
        },
        "end": {
          "line": 14,
          "character": 72
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "cannot cast to continuation type `(ref null cont)`"
    },
    {
      "range": {
        "start": {
          "line": 14,
          "character": 28
        },
        "end": {
          "line": 14,
          "character": 72
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "cannot cast to continuation type `(ref null cont)`"
    },
    {
      "range": {
        "start": {
          "line": 17,
          "character": 28
        },
        "end": {
          "line": 17,
          "character": 80
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "cannot cast to continuation type `(ref null nocont)`"
    },
    {
      "range": {
        "start": {
          "line": 17,
          "character": 28
        },
        "end": {
          "line": 17,
          "character": 80
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "cannot cast to continuation type `(ref null nocont)`"
    },
    {
      "range": {
        "start": {
          "line": 20,
          "character": 28
        },
        "end": {
          "line": 20,
          "character": 74
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "cannot cast to continuation type `(ref $c)`"
    },
    {
      "range": {
        "start": {
          "line": 20,
          "character": 28
        },
        "end": {
          "line": 20,
          "character": 74
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "cannot cast to continuation type `(ref $c)`"
    },
    {
      "range": {
        "start": {
          "line": 24,
          "character": 28
        },
        "end": {
          "line": 24,
          "character": 77
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "cannot cast to continuation type `(ref null cont)`"
    },
    {
      "range": {
        "start": {
          "line": 24,
          "character": 28
        },
        "end": {
          "line": 24,
          "character": 77
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "cannot cast to continuation type `(ref null cont)`"
    },
    {
      "range": {
        "start": {
          "line": 27,
          "character": 28
        },
        "end": {
          "line": 27,
          "character": 85
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "cannot cast to continuation type `(ref null nocont)`"
    },
    {
      "range": {
        "start": {
          "line": 27,
          "character": 28
        },
        "end": {
          "line": 27,
          "character": 85
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "cannot cast to continuation type `(ref null nocont)`"
    },
    {
      "range": {
        "start": {
          "line": 30,
          "character": 28
        },
        "end": {
          "line": 30,
          "character": 79
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "cannot cast to continuation type `(ref $c)`"
    },
    {
      "range": {
        "start": {
          "line": 30,
          "character": 28
        },
        "end": {
          "line": 30,
          "character": 79
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "cannot cast to continuation type `(ref $c)`"
    }
  ]
}
