crates/service/tests/diagnostics/snapshots/features__diagnostics__type_misuse__cont_bind.snap
---
source: crates/service/tests/diagnostics/type_misuse.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 21,
          "character": 15
        },
        "end": {
          "line": 21,
          "character": 19
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "expected type is cont, but type of `$ft0` is func",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 2,
                "character": 2
              },
              "end": {
                "line": 2,
                "character": 33
              }
            }
          },
          "message": "func type defined here"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 21,
          "character": 20
        },
        "end": {
          "line": 21,
          "character": 24
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "expected type is cont, but type of `$ft0` is func",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 2,
                "character": 2
              },
              "end": {
                "line": 2,
                "character": 33
              }
            }
          },
          "message": "func type defined here"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 30,
          "character": 4
        },
        "end": {
          "line": 30,
          "character": 29
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "cont type `$ct2` must match cont type `$ct1_alt` in continuation types",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 9,
                "character": 2
              },
              "end": {
                "line": 9,
                "character": 25
              }
            }
          },
          "message": "cont type `$ct2` defined with: [i64, i32] -> [i32]"
        },
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 12,
                "character": 2
              },
              "end": {
                "line": 12,
                "character": 33
              }
            }
          },
          "message": "cont type `$ct1_alt` defined with: [i64] -> [i32]"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 39,
          "character": 4
        },
        "end": {
          "line": 39,
          "character": 30
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "cont type `$ct2` must match cont type `$ct1_alt2` in continuation types",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 9,
                "character": 2
              },
              "end": {
                "line": 9,
                "character": 25
              }
            }
          },
          "message": "cont type `$ct2` defined with: [i64, i32] -> [i32]"
        },
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 15,
                "character": 2
              },
              "end": {
                "line": 15,
                "character": 35
              }
            }
          },
          "message": "cont type `$ct1_alt2` defined with: [i32] -> [i64]"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 47,
          "character": 4
        },
        "end": {
          "line": 47,
          "character": 25
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "cont type `$ct0` must match cont type `$ct1` in continuation arguments",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 3,
                "character": 2
              },
              "end": {
                "line": 3,
                "character": 25
              }
            }
          },
          "message": "cont type `$ct0` defined with: [] -> [i32]"
        },
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 6,
                "character": 2
              },
              "end": {
                "line": 6,
                "character": 25
              }
            }
          },
          "message": "cont type `$ct1` defined with: [i32] -> [i32]"
        }
      ]
    }
  ]
}
