crates/service/tests/diagnostics/snapshots/features__diagnostics__type_misuse__resume.snap
---
source: crates/service/tests/diagnostics/type_misuse.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 24,
          "character": 12
        },
        "end": {
          "line": 24,
          "character": 16
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "expected type is cont, but type of `$ft0` is func",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 2,
                "character": 2
              },
              "end": {
                "line": 2,
                "character": 20
              }
            }
          },
          "message": "func type defined here"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 68,
          "character": 12
        },
        "end": {
          "line": 68,
          "character": 16
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "expected type is cont, but type of `$ft0` is func",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 2,
                "character": 2
              },
              "end": {
                "line": 2,
                "character": 20
              }
            }
          },
          "message": "func type defined here"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 74,
          "character": 27
        },
        "end": {
          "line": 74,
          "character": 35
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "last result type of label `$handler` must be continuation reference type",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 72,
                "character": 20
              },
              "end": {
                "line": 72,
                "character": 39
              }
            }
          },
          "message": "type of label `$handler` declared here"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 85,
          "character": 27
        },
        "end": {
          "line": 85,
          "character": 35
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "param types of tag `$t4` must match result types of label `$handler`",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 21,
                "character": 2
              },
              "end": {
                "line": 21,
                "character": 23
              }
            }
          },
          "message": "tag `$t4` defined here"
        },
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 82,
                "character": 20
              },
              "end": {
                "line": 82,
                "character": 39
              }
            }
          },
          "message": "type of label `$handler` defined here"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 96,
          "character": 27
        },
        "end": {
          "line": 96,
          "character": 35
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "param types of tag `$t4` must match result types of label `$handler`",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 21,
                "character": 2
              },
              "end": {
                "line": 21,
                "character": 23
              }
            }
          },
          "message": "tag `$t4` defined here"
        },
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 93,
                "character": 20
              },
              "end": {
                "line": 93,
                "character": 47
              }
            }
          },
          "message": "type of label `$handler` defined here"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 107,
          "character": 27
        },
        "end": {
          "line": 107,
          "character": 35
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "param types of tag `$t4` must match result types of label `$handler`",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 21,
                "character": 2
              },
              "end": {
                "line": 21,
                "character": 23
              }
            }
          },
          "message": "tag `$t4` defined here"
        },
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 104,
                "character": 20
              },
              "end": {
                "line": 104,
                "character": 43
              }
            }
          },
          "message": "type of label `$handler` defined here"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 118,
          "character": 27
        },
        "end": {
          "line": 118,
          "character": 35
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "result types of tag `$t4` must match result types of cont type `$ct4`",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 21,
                "character": 2
              },
              "end": {
                "line": 21,
                "character": 23
              }
            }
          },
          "message": "tag `$t4` defined here"
        },
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 15,
                "character": 2
              },
              "end": {
                "line": 15,
                "character": 25
              }
            }
          },
          "message": "cont type `$ct4` defined here"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 126,
          "character": 21
        },
        "end": {
          "line": 126,
          "character": 24
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "param types of tag `$t4` must be empty",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 21,
                "character": 2
              },
              "end": {
                "line": 21,
                "character": 23
              }
            }
          },
          "message": "tag `$t4` defined here"
        }
      ]
    }
  ]
}
