crates/service/tests/diagnostics/snapshots/features__diagnostics__type_misuse__resume_subtyping3.snap
---
source: crates/service/tests/diagnostics/type_misuse.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 26,
          "character": 26
        },
        "end": {
          "line": 26,
          "character": 34
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "param types of tag `$t` must match result types of label `$handler`",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 11,
                "character": 2
              },
              "end": {
                "line": 11,
                "character": 32
              }
            }
          },
          "message": "tag `$t` defined here"
        },
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 24,
                "character": 20
              },
              "end": {
                "line": 24,
                "character": 53
              }
            }
          },
          "message": "type of label `$handler` defined here"
        }
      ]
    }
  ]
}
