crates/service/tests/diagnostics/snapshots/features__diagnostics__type_misuse__select.snap
---
source: crates/service/tests/diagnostics/type_misuse.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 4,
          "character": 4
        },
        "end": {
          "line": 4,
          "character": 10
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [any, any, i32], found [i32]"
    },
    {
      "range": {
        "start": {
          "line": 9,
          "character": 4
        },
        "end": {
          "line": 9,
          "character": 10
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [(ref null array), (ref null array), i32], found [(ref null array), i32]"
    },
    {
      "range": {
        "start": {
          "line": 4,
          "character": 4
        },
        "end": {
          "line": 4,
          "character": 10
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "second type from stack top must be number type or vector type"
    },
    {
      "range": {
        "start": {
          "line": 9,
          "character": 4
        },
        "end": {
          "line": 9,
          "character": 10
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "second type from stack top must be number type or vector type but found `(ref null array)`"
    }
  ]
}
